objects/Contribution__c.object
<CustomObject>
    <description>Contribution - Goes toward Sales Quota</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Annual Sales Plans</relationshipLabel>
        <relationshipName>Annual_Sales_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Annual_Sales_Target__c</fullName>
        <label>Annual Sales Target</label>
        <summarizedField>Monthly_Sales_Plan__c.Monthly_Amount__c</summarizedField>
        <summaryForeignKey>Monthly_Sales_Plan__c.Annual_Sales_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Annual_Upload_Target__c</fullName>
        <label>Annual Upload Target</label>
        <summarizedField>Monthly_Sales_Plan__c.Monthly_Upload_Target__c</summarizedField>
        <summaryForeignKey>Monthly_Sales_Plan__c.Annual_Sales_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Plan_Year__c</fullName>
        <label>Plan Year</label>
        <picklist>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2025</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Annual Sales Plan</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Annual Sales Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>